fix lint errors and specify java version to 17